# mina-web-wallet

./: .gitignore  .prettierignore  .prettierrc  CLAUDE.md  Cargo.toml  Makefile  README.md  package.json
.github/workflows/: ci.yml  deploy.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs  wallet.rs
frontend/: app.js  index.html
wasm-module/: Cargo.toml
wasm-module/src/: lib.rs
